Wednesday night check in

--- a/BlazorClient/Pages/Books/BookUpsert.razor
+++ b/BlazorClient/Pages/Books/BookUpsert.razor
@@ -192,7 +192,7 @@
                 }
                 else
                 {
-                    await _jsRunTime.ToastrSuccess("Something went wrong.  Book was not successfully updated, try again.");
+                    await _jsRunTime.ToastrError("Something went wrong.  Book was not successfully updated, try again.");
                 }
             }
             else
@@ -204,7 +204,7 @@
                 }
                 else
                 {
-                    await _jsRunTime.ToastrSuccess("Something went wrong.  Book was not successfully created, try again.");
+                    await _jsRunTime.ToastrError("Something went wrong.  Book was not successfully created, try again.");
                 }
             }
         }
