--- a/BlazorServer/Pages/Books/BookUpsert.razor
+++ b/BlazorServer/Pages/Books/BookUpsert.razor
@@ -145,10 +145,10 @@
             }
             catch
             {
-                await Task.Delay(10);
+                //await Task.Delay(10);
                 loading = true;
 
-                await _jsRunTime.ToastrError("Possible issue with loading html text content - worry if you keep seeing this popup.");
+                //await _jsRunTime.ToastrError("Possible issue with loading html text content - worry if you keep seeing this popup.");
             }
         }
     }
@@ -185,14 +185,14 @@
             if (BookDto.BookId != 0 && Title == "Update")
             {
                 var updateResult = await _bookService.UpdateBookAsync(BookDto);
-
-                if (updateResult == 0)
+                
+                if (updateResult != 0)
                 {
                     await _jsRunTime.ToastrSuccess("Book updated successfully.");
                 }
                 else
                 {
-                    await _jsRunTime.ToastrSuccess("Something went wrong.  Book was not successfully updated, try again.");
+                    await _jsRunTime.ToastrError("Something went wrong.  Book was not successfully updated, try again.");
                 }
             }
             else
@@ -204,7 +204,7 @@
                 }
                 else
                 {
-                    await _jsRunTime.ToastrSuccess("Something went wrong.  Book was not successfully created, try again.");
+                    await _jsRunTime.ToastrError("Something went wrong.  Book was not successfully created, try again.");
                 }
             }
         }
